After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 745465 - More VT fixes
More VT fixes
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2015-03-02 15:05 UTC by Ray Strode [halfline]
Modified: 2015-03-02 15:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
worker: drop inaccurate FIXME (3.17 KB, patch)
2015-03-02 15:05 UTC, Ray Strode [halfline]
none Details | Review
worker: split VT_SETMODE handling to helper function (4.00 KB, patch)
2015-03-02 15:05 UTC, Ray Strode [halfline]
none Details | Review
worker: don't use SIGUSR1 for VT switch signal (2.60 KB, patch)
2015-03-02 15:05 UTC, Ray Strode [halfline]
none Details | Review
worker: fix hang in VT_WAITACTIVE (5.54 KB, patch)
2015-03-02 15:05 UTC, Ray Strode [halfline]
none Details | Review

Description Ray Strode [halfline] 2015-03-02 15:05:31 UTC
Things aren't quite working right, it's possible to get stuck VTs.
Comment 1 Ray Strode [halfline] 2015-03-02 15:05:34 UTC
Created attachment 298309 [details] [review]
worker: drop inaccurate FIXME

I think the problem is really just the terminal getting
stuck in KD_GRAPHICS/VT_AUTO mode by plymouth.
Comment 2 Ray Strode [halfline] 2015-03-02 15:05:39 UTC
Created attachment 298310 [details] [review]
worker: split VT_SETMODE handling to helper function

We're going to call it in more than one place in the code,
so it's better to keep it in a separate function.
Comment 3 Ray Strode [halfline] 2015-03-02 15:05:43 UTC
Created attachment 298311 [details] [review]
worker: don't use SIGUSR1 for VT switch signal

That signal is blocked when the worker is forked,
because the main daemon uses it to notice when
the X server is ready.

This commit changes the worker to use real-time
signals instead, which are better anyway, since
they queue.
Comment 4 Ray Strode [halfline] 2015-03-02 15:05:48 UTC
Created attachment 298312 [details] [review]
worker: fix hang in VT_WAITACTIVE

When plymouth deactivates it correctly leaves the display in
GRAPHICS mode but incorrectly stops processing VT changes.  This
combination of VT_AUTO + KD_GRAPHICS makes VT switches hang.

Deal with the situation on our side until plymouth is fixed.
Comment 5 Ray Strode [halfline] 2015-03-02 15:06:25 UTC
Attachment 298309 [details] pushed as 19f169e - worker: drop inaccurate FIXME
Attachment 298310 [details] pushed as 69847b9 - worker: split VT_SETMODE handling to helper function
Attachment 298311 [details] pushed as 2b02aad - worker: don't use SIGUSR1 for VT switch signal
Attachment 298312 [details] pushed as fe8b113 - worker: fix hang in VT_WAITACTIVE