worker: drop inaccurate FIXME

I think the problem is really just the terminal getting
stuck in KD_GRAPHICS/VT_AUTO mode by plymouth.

https://bugzilla.gnome.org/show_bug.cgi?id=745465